@@ -2,6 +2,8 @@ from ucommon 3.4.0 to 4.0.0
 - introduction of protocols as abstract bases for mixin classes.
 - Socket class tracks last error and has iowait/blocking property.
 - Socket int methods return errno() rather than -1 on error.
+- buffer protocol created.
+- string no longer has dependency on socket.
 
 from ucommon 3.3.7 to 3.4.0
 - simplified to better focus on core runtime mission.
